<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sanehal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="takumi1988okamoto@gmail.com">takumi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>sanehal_vehicle</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
